# starlink-beaming-challenge

./: .gitignore  Cargo.toml  README.md  __init__.py  coi-serviceworker.js  run.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: pages.yml
.hack/: evaluate.py
beamer/: Cargo.toml  index.html  index.js  package-lock.json  package.json
beamer-viz/: Cargo.toml  index.html  index.js  package-lock.json  package.json  solve.worker.js  webpack.config.mjs
beamer-viz/.cargo/: config.toml
beamer-viz/src/: camera.rs  lib.rs  scene.rs  tiles.rs
beamer/.cargo/: config.toml
beamer/src/: app.rs  assign.rs  coloring.rs  components.rs  feasibility.rs  geom.rs  index.rs  io.rs  lib.rs  par.rs  trace.rs
ksat/: __init__.py  assigner.py  evaluate.py
ksat/classes/: __init__.py  interferer.py  position.py  satellite.py  user.py
src/: assign.rs  bound.rs  coloring.rs  feasibility.rs  geom.rs  index.rs  io.rs  lib.rs  matching.rs  trace.rs  wasm.rs
src/viz/: mod.rs  scene.rs  shaders.wgsl  tiles.rs
web/: beamer.html  build.sh  coi-serviceworker.js  dist.sh  index.html  serve.py  solver-worker.js  solver.html  viz-solve-worker.js
xtask/: Cargo.toml
xtask/src/: main.rs
