[package]
name = "beam-planner"
version = "1.0.0"
edition = "2021"
description = "Starlink beam planning solver + GPU visualizer."

# `xtask` is the build-tooling crate (cargo xtask dist). It's a separate member
# so its heavy build deps never compile during a normal `cargo build`; only the
# root package builds by default.
[workspace]
members = ["xtask"]
default-members = ["."]

[lib]
name = "beam_planner"
path = "src/lib.rs"
# rlib for the native bins/tests; cdylib so the wasm32 build emits a `.wasm`
# module for wasm-bindgen. (The native cdylib artifact is built but unused.)
crate-type = ["cdylib", "rlib"]

# The solver: scenario in, validator-format solution out.
[[bin]]
name = "beam-planner"
path = "src/bin/solver.rs"

# The interactive GPU visualizer ("Beamer") — a thin shim over the library's
# `viz` module. Needs the `viz` feature (default); `--no-default-features` builds
# just the solver + library (e.g. for the WASM solver module, where the viz's
# native-only deps don't apply).
[[bin]]
name = "beamer"
path = "src/bin/beamer.rs"
required-features = ["viz"]

[features]
default = ["parallel", "viz"]
# Multicore solving. Native: rayon's work-stealing OS-thread pool. Browser/WASM:
# rayon backed by Web Workers via wasm-bindgen-rayon (needs SharedArrayBuffer +
# cross-origin isolation — COOP/COEP headers). Disable (`--no-default-features`)
# for a serial build that compiles on stable for wasm32-unknown-unknown with no
# thread/atomics requirement; the solver is deterministic, so serial and parallel
# produce bit-identical solutions.
parallel = ["dep:rayon", "dep:wasm-bindgen-rayon"]
# The GPU visualizer and its native-only dependencies. On by default; off when
# building just the headless solver/library (notably for WASM).
viz = ["dep:eframe", "dep:egui", "dep:bytemuck", "dep:glam", "dep:image", "dep:pollster", "dep:ureq", "dep:web-sys", "dep:wasm-bindgen-futures", "dep:wgpu", "dep:ehttp", "dep:js-sys", "wire"]
# Serialize the solve output (Scenario + Feasibility + Trace) across the viz's
# Web Worker boundary. Enabled by `viz`, and added to the threaded solver build
# so its Worker can produce a Trace the viz render module deserializes.
wire = ["dep:serde", "dep:postcard"]

[dependencies]
rayon = { version = "1", optional = true }
arrayvec = "0.7"
# std::time::Instant panics on wasm32-unknown-unknown; web-time is an API-identical
# drop-in (a zero-cost std re-export off-wasm, Performance.now()-backed on wasm).
web-time = "1"
# Serialize the solve output (Scenario + Feasibility + Trace) across the viz's
# Web Worker boundary. Behind `viz`; the derives are #[cfg_attr(feature="viz")].
serde = { version = "1", features = ["derive"], optional = true }
postcard = { version = "1", features = ["alloc"], optional = true }

# GPU visualizer (only linked into the beamer binary, behind the `viz` feature).
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts"], optional = true }
egui = { version = "0.29", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
glam = { version = "0.29", features = ["bytemuck"], optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }
pollster = { version = "0.3", optional = true }

# Native-only viz dep: ureq is a blocking-socket HTTP client with no wasm support.
# On wasm the basemap tiles are disabled (tiles.rs), so it's simply absent there.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2", optional = true }

# WASM: the wasm-bindgen entry points, the Web Worker thread pool (when `parallel`),
# and web-sys for the <canvas> handed to eframe's WebRunner (when `viz`).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-rayon = { version = "1.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["HtmlCanvasElement"] }
# The async `#[wasm_bindgen]` viz entry generates a future→Promise bridge.
wasm-bindgen-futures = { version = "0.4", optional = true }
# eframe only enables wgpu's "webgpu" backend on web; add "webgl" so we can force
# Backends::GL (wgpu 22's WebGPU path is rejected by current browsers). Feature-
# unifies with eframe's wgpu — both backends compiled, GL selected at runtime.
wgpu = { version = "22", features = ["webgl"], optional = true }
# Async scenario fetch (no std::fs on wasm).
ehttp = { version = "0.5", optional = true }
# js-sys for the Uint8Array returned by the solve Worker.
js-sys = { version = "0.3", optional = true }

[profile.dev]
opt-level = 1
split-debuginfo = "packed"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
