# Virtual workspace. Two self-contained crates:
#
#   beamer/         the beam-planning solver — core library + `beamer` CLI +
#                   the browser solver app (wasm).
#   beamer-viz/     Beamer — the GPU visualizer — rendering library + `beamer-viz` desktop
#                   GUI + the browser visualizer app (wasm). Depends on `beamer`.
#
# Each builds for the web with wasm-pack (see its package.json / webpack.config.mjs).
[workspace]
members = ["beamer", "beamer-viz"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
web-time = "1"
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.3"

# Profiles are workspace-global and must live in the workspace root.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
split-debuginfo = "packed"
