# The solver: the `beamer` core library (the beam-planning algorithm) and the
# native `beamer` CLI (bin/main.rs). The `beamer-viz` crate depends on this one
# for the core — and is the single browser front end (it embeds the solver).
[package]
name = "beamer"
version.workspace = true
edition.workspace = true
description = "Starlink beam-planning solver: core library + CLI."

[[bin]]
name = "beamer"
path = "bin/main.rs"

[features]
default = ["parallel"]
# Multicore solving: rayon's work-stealing pool. The single-thread build omits
# this and the solver's `par` shim falls back to sequential iterators (e.g. for a
# no-atomics wasm build of a dependent crate).
parallel = ["dep:rayon"]
# serde derives on the solve output (Scenario, Feasibility, Trace) so the
# `beamer-viz` crate can postcard them across its Web Worker boundary.
wire = ["dep:serde"]

[dependencies]
rayon = { version = "1", optional = true }
arrayvec = "0.7"
# std::time::Instant panics on wasm32-unknown-unknown; web-time is an API-identical
# drop-in (a zero-cost std re-export off-wasm, Performance.now()-backed on wasm).
web-time.workspace = true
serde = { version = "1", features = ["derive"], optional = true }
